logs/Slang/chapter-11/11.4.14.3--unpack_stream_pad.sv.log
name: unpack_stream_pad
description: padded stream unpack test
should_fail: 0
tags: 11.4.14.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.3--unpack_stream_pad.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-11/11.4.14.3--unpack_stream_pad.sv:14:18: error: language feature not yet supported
	bit [127:0] d = {<<{a, b, c}};
	                ^~~~~~~~~~~~~
